# codex_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
LOL/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_seed_internal_user.py
k8s/: app.yaml  mysql.yaml
templates/customer/: home.html  login.html
templates/internal/: create_customer.html  home.html  login.html
