[tool.poetry]
name = "lol"
version = "0.1.0"
description = "Django + MySQL starter environment for LOL"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [{ include = "LOL" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
django = "^5.1"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
